--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Welcome to FarPay Developer hup
+<h1>Velcome</h1>
+Welcome to FarPay developer hub, that is live and well.
+Please attend to our other document repositories for now.
