--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1>Velcome</h1>
+<h1>Welcome</h1>
 Welcome to FarPay developer hub, that is live and well.
 Please attend to our other document repositories for now.
