--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>Welcome</h1>
 Welcome to FarPay developer hub, that is live and well.
 Please attend to our other document repositories for now.
+
+Our existing documentation portal is available from:
+<a href="https://github.com/FarPay">FarPay on Github</a>
